[tool.poetry]
name = "kenkenpa"
version = "0.1.4"
description = "Generate a StateGraph of LangGraph that can be compiled from structured data."
authors = ["ONIHEI0910 <17534339+onihei0910@users.noreply.github.com>"]
repository = "https://github.com/onihei0910/kenkenpa"
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain-core = "^0.3.0"
langgraph = "^0.2.2"
pydantic = "^2.9.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
ipython = "^8.27.0"
grandalf = "^0.8"
pytest-cov = "^5.0.0"
sphinx = "^7.4.7"
sphinx-rtd-theme = "^2.0.0"
pylint = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
