[tool.poetry]
name = "kenkenpa"
version = "0.2.3"
description = "Generate a StateGraph of LangGraph that can be compiled from structured data."
authors = ["ONIHEI0910 <onihei0910_dev@delve-siphon.net>"]
repository = "https://github.com/onihei0910/kenkenpa"
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain-core = "^0.3.0"
langgraph = "^0.2.2"
pydantic = "^2.9.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
sphinx = "^7.4.7"
sphinx-rtd-theme = "^2.0.0"
pylint = "^3.3.1"
grandalf = "^0.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
