[project]
name = "kenkenpa"
version = "0.2.9"
description = "Generate a StateGraph of LangGraph that can be compiled from structured data."
authors = [
    {name = "ONIHEI0910", email = "onihei0910_dev@delve-siphon.net"}
]
readme = "README.md"
requires-python = ">= 3.10,<4.0.0"
repository = "https://github.com/onihei0910/kenkenpa"
license = "MIT"

dependencies = [
    "pydantic (>=2.9.2,<3.0.0)",
    "langchain-core (>=0.3.0,<0.4.0)",
    "langgraph (>=0.2.2,<0.5.0)",
    "langgraph-prebuilt (>=0.1.0,<0.3.0)"
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
sphinx = "^7.4.7"
sphinx-rtd-theme = "^2.0.0"
pylint = "^3.3.1"
grandalf = "^0.8"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
